# cryptid-finder

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
assets/: README.md  index.css  piece-1.txt  piece-2.txt  piece-3.txt  piece-4.txt  piece-5.txt  piece-6.txt
src/: buildingmap.rs  main.rs  model.rs  tryingclues.rs
src/substate/: buildingmap.rs  mod.rs  placingstructures.rs  tryingclues.rs
