[package]
name = "cryptid-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.11"
hexx = "0.4.2"
notan = { version = "0.9.3", features = ["egui"] }
strum = { version = "0.24.1", features = ["derive"] }
